# GUWar

./: CMakeLists.txt  Resource.qrc
Include/: Common.h  MainWindow.h  Pch.h  Soldier.h
Language/: GUWar_zh_CN.ts
Source/: Common.cpp  Main.cpp  MainWindow.cpp  Soldier.cpp
